@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.HashMap;
 import java.util.Map;
@@ -329,7 +328,7 @@ public class AdminLicenseController {
             }
 
             // Get config directory and target path
-            Path configPath = Paths.get(InstallationPathConfig.getConfigPath());
+            Path configPath = Path.of(InstallationPathConfig.getConfigPath());
             Path configPathAbs = configPath.toAbsolutePath().normalize();
             Path targetPath = configPathAbs.resolve(filename).normalize();
             log.info(
